--- a/source/_posts/2015-03-01-asia-trip-2015.markdown
+++ b/source/_posts/2015-03-01-asia-trip-2015.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Asia Trip 2015"
 date: 2015-03-01 16:06:52 -0700
 comments: true
-categories: 
+categories: [Travel, Asia]
 ---
 
 {% img /images/intro_asia/packing.jpg 'packing.jpg' %}
