--- a/source/_posts/2015-06-10-japan-part-2.markdown
+++ b/source/_posts/2015-06-10-japan-part-2.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Backpacking Japan: Part 2"
 date: 2015-06-10 19:15:23 -0700
 comments: true
-categories: 
+categories: [Travel, Japan]
 ---
 
 {% img /images/japan/6_tokyo_again/train_fuji.jpg 'train_fuji.jpg' %}
