--- a/source/_posts/2015-04-02-vietnam.markdown
+++ b/source/_posts/2015-04-02-vietnam.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Backpacking in Vietnam"
+title: "Backpacking Vietnam"
 date: 2015-04-02 16:06:52 -0700
 comments: true
 categories: [Travel, Vietnam]
