--- a/source/_posts/2015-04-02-vietnam.markdown
+++ b/source/_posts/2015-04-02-vietnam.markdown
@@ -10,7 +10,7 @@ categories: [Travel, Vietnam]
 
 When I set out on the biggest adventure of my life, I was afraid it somehow wouldn't match up to expectations. And expectations were high after hearing stories and having wanted to go for years. So I'm happy to say that Vietnam was perfect, it was a crazy and exhilarating adventure of strange things and marvelous places.
 
-Here are some highlights from the trip
+Here are some highlights from the trip:
 
 <!-- more -->
 
