--- a/source/_posts/2015-06-10-japan-part-2.markdown
+++ b/source/_posts/2015-06-10-japan-part-2.markdown
@@ -6,6 +6,8 @@ comments: true
 categories: [Travel, Japan]
 ---
 
+It's incredible how fast the months can pass when you're having fun! As the trip came to a close we headed further into Japan to explore Osaka and Hiroshima before heading back to Tokyo. We actually went back to Tokyo earlier than we had planned, since it was just that incredible!
+
 {% img /images/japan/6_tokyo_again/train_fuji.jpg 'train_fuji.jpg' %}
 
 We caught a pretty good view of Mount Fuji as we sped by on the Shinkansen.
